--- a/s01/style.css
+++ b/s01/style.css
@@ -88,6 +88,22 @@ body {
 }
 
 
+.top {
+    position: relative;
+}
+
+.top-picture {
+    width:100%;
+    height:auto;
+}
+
+.top-title {
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+}
+
 
 @media screen and (min-width: 900px) {
     .contact-nav::after {
