--- a/s01/style.css
+++ b/s01/style.css
@@ -8,8 +8,12 @@ body {
     flex-direction: row;
 }
 
+.flex-column {
+    display: flex;
+    flex-direction: column;
+}
+
 .sub-header {
-    height: 53px;
     padding: 15px;
     border-bottom: 1px solid #d4d4d4;
 }
@@ -28,9 +32,6 @@ body {
     flex-wrap: wrap;
     justify-content: space-between;
     color: #7e7e7e;
-}
-
-.sub-menu > ul > li {
 }
 
 .sns-link {
@@ -74,7 +75,6 @@ body {
     position: relative;
 }
 
-
 .contact-nav {
     background-color: #FCFC38;
     display: block;
@@ -90,20 +90,86 @@ body {
 
 .top {
     position: relative;
+    height: 800px;
 }
 
 .top-picture {
-    width:100%;
-    height:auto;
+    width: 100%;
+    object-fit:cover;
 }
 
-.top-title {
+.top-contents {
     position: absolute;
     top:50%;
     left:50%;
     transform: translate(-50%,-50%);
+    color: white;
+    font-size: 30px;
+    align-items: center;
+    z-index: 100;
 }
 
+.top-title {
+    font-size: 80px;
+    letter-spacing: 15px;
+}
+
+.top-by {
+    margin-bottom: 50px;
+}
+
+.top-deadline {
+    align-items: center;
+    width: 100%;
+    min-width: 623px;
+}
+
+.deadline-text {
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+    border-bottom: 1px solid #d4d4d4;
+}
+
+.deadline-box {
+    width: 100%;
+    gap: 18px;
+}
+.deadline-item {
+    width: 33%;
+    align-items: center;
+}
+.deadline-date {
+    height: 90px;
+    width: 100%;
+    display: flex;
+    gap: 8px;
+    align-items: flex-end;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.date {
+    font-size: clamp(40px, 10.666666667vw, 60px);
+    letter-spacing: -0.025em;
+    line-height: 1;
+}
+
+.day {
+    font-size: clamp(10px, 2.666666667vw, 20px);
+}
+
+.deadline-course {
+    font-size: 15px;
+    text-align: center;
+    color: #000000;
+    height: 25px;
+    width: 100%;
+    background-color: white;
+    border-left: 3px solid #C7B368;
+}
 
 @media screen and (min-width: 900px) {
     .contact-nav::after {
