--- a/s01/style.css
+++ b/s01/style.css
@@ -193,6 +193,48 @@ body {
     display: block;
 }
 
+.section-heading-en {
+    font-size: clamp(28px, 4.1666666667vw, 60px);
+    font-weight: 600;
+    text-align: center;
+    letter-spacing: 0.1em;
+    line-height: 1.269;
+    margin: 0 0 12px;
+}
+
+.section-heading-ja {
+    font-size: clamp(12px, 0.9027777778vw, 13px);
+    text-align: center;
+    letter-spacing: 0.1em;
+    line-height: 1.269;
+    margin: 0 0 12px;
+    position: relative;
+}
+
+.section-heading-ja::before {
+    content: "";
+    height: 38px;
+    width: 60px;
+    background-color: #FCFC38;
+    left: 50%;
+    top: 50%;
+    position: absolute;
+    display: block;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+}
+
+.section-subheading {
+    font-size: clamp(22px, 2.7777777778vw, 40px);
+    font-weight: bold;
+    line-height: 1.5;
+    margin: 70px 0 48px;
+}
+
+.section-desc p:not(:last-child) {
+    margin-bottom: 1.86em;
+}
+
 .mission-img {
     position: absolute;
     left: 0;
