--- a/s01/style.css
+++ b/s01/style.css
@@ -189,11 +189,11 @@ body {
     width: 50%;
 }
 
-.section-heading-mission > span {
+.section-heading > span {
     display: block;
 }
 
-.section-heading-mission-en {
+.section-heading-en {
     font-size: clamp(28px, 4.1666666667vw, 60px);
     font-weight: 600;
     text-align: center;
@@ -202,7 +202,7 @@ body {
     margin: 0 0 12px;
 }
 
-.section-heading-mission-ja {
+.section-heading-ja {
     font-size: clamp(12px, 0.9027777778vw, 13px);
     text-align: center;
     letter-spacing: 0.1em;
@@ -211,7 +211,7 @@ body {
     position: relative;
 }
 
-.section-heading-mission-ja::before {
+.section-heading-ja::before {
     content: "";
     height: 38px;
     width: 60px;
@@ -224,14 +224,14 @@ body {
     z-index: -1;
 }
 
-.section-subheading-mission {
+.mission-sub-heading {
     font-size: clamp(22px, 2.7777777778vw, 40px);
     font-weight: bold;
     line-height: 1.5;
     margin: 70px 0 48px;
 }
 
-.section-desc-mission p:not(:last-child) {
+.mission-desc p:not(:last-child) {
     margin-bottom: 1.86em;
 }
 
@@ -253,20 +253,20 @@ body {
     padding: 0 48px;
     color: #fff;
 }
-.section-heading-about{
+.about-heading{
     text-align: center;
 }
-.section-subheading-about{
+.about-sub-heading{
     font-size: clamp(20px, 2.0833333333vw, 30px);
     font-weight: bold;
     line-height: 1.6666666667;
     margin: 24px 0 24px;
     text-align: center;
 }
-.section-subheading-about-small {
+.about-sub-heading-small {
     display: block;
 }
-.section-subheading-about-large {
+.about-sub-heading-large {
     display: block;
 }
 @media screen and (min-width: 768px) {
@@ -276,7 +276,7 @@ body {
   }
 }
 
-.section-heading-about-en{
+.about-heading-en{
     display: block;
     font-family: azo-sans-web, sans-serif;
     font-size: clamp(28px, 4.1666666667vw, 60px);
@@ -285,7 +285,7 @@ body {
     line-height: 1.269;
     margin: 0 0 12px;
 }
-.section-heading-about-ja{
+.about-heading-ja{
     display: block;
     font-family: azo-sans-web, sans-serif;
     font-size: clamp(12px, 0.9027777778vw, 13px);
@@ -293,14 +293,86 @@ body {
     letter-spacing: 0.3em;
     line-height: 1.2692307692;
 }
-.section-desc-about{
+.about-desc{
     max-width: 680px;
     margin: 0 auto;
 }
-.section-desc-about p:not(:last-child) {
+.about-desc p:not(:last-child) {
     margin: 0 0 1.86em;
 }
 
+/* Feature */
+li {
+    list-style:none;
+}
+
+.feature {
+    
+}
+
+.feature-inner {
+    margin: 0 auto;
+    padding: 79px 0 113px;
+}
+
+
+.feature-contents {
+    margin: 50px;
+    justify-content: center;
+}
+
+.feature-item {
+    width: 350px;
+    min-width: 350px;
+}
+
+.feature-item:not(:last-child) {
+    margin: 0 20px 0 0;
+}
+
+.feature-item-img {
+    text-align: right;
+    position: relative;
+    height: 300px;
+    margin: 0 0 60px;
+}
+
+.feature-item-img::before{
+    display: block;
+    position: absolute;
+    content: "";
+    background-color: #FCFC38;
+    bottom: -30px;
+    left: 0px;
+    height: 80%;
+    width: 80%;
+    z-index: -1;
+}
+.feature-item-sub-title {
+    position: absolute;
+    top: 40%;
+    writing-mode: vertical-rl;
+    letter-spacing: 0.3em;
+    font-size: clamp(11px, 0.8333333333vw, 12px);
+    margin: 0 0 0 5px;
+}
+
+.feature-item-sub-title {
+    display: block;
+}
+
+.feature-item-body {
+
+}
+
+.feature-item-title {
+
+}
+
+.feature-item-desc {
+
+}
+                
 @media screen and (min-width: 900px) {
     .contact-nav::after {
         content: '';
